# dspa-project

./: .gitignore  .tmux.conf  Cargo.toml  Dockerfile  README.md  Settings.toml  dspa-tmux.sh  possible_metrics  rustfmt.toml
dataset/tests/task1/active/: comments_event_stream.csv  likes_event_stream.csv  posts_event_stream.csv
dataset/tests/task1/dense/: comments_event_stream.csv  posts_event_stream.csv
dataset/tests/task1/fake_dup_ids/: comments_event_stream.csv  likes_event_stream.csv  posts_event_stream.csv
dataset/tests/task1/fake_short/: .#out.txt  comments_event_stream.csv  likes_event_stream.csv  out.txt  posts_event_stream.csv
dataset/tests/task2/1/: comments_event_stream.csv  likes_event_stream.csv  posts_event_stream.csv
dataset/tests/task3/post_freq/: comments_event_stream.csv
dataset/tests/task3/unique_words/: comments_event_stream.csv  info  posts_event_stream.csv
db-tools/: .#tables.sql  tables.sql  tmp.sql
kafka-tools/: delete_all_topics.sh  pipe_to_topic.sh  reset.sh
producer/: Cargo.toml
src/: event.rs  lib.rs  main.rs  percentile.rs
src/db/: query.rs
src/kafka/: consumer.rs  mod.rs  source.rs
src/operators/: active_posts.rs  friend_recommendations.rs  mod.rs  post_freq.rs  post_trees.rs  spam_detection.rs  unique_words.rs  window_notify.rs
