[package]
name = "dspa-project"
version = "0.1.0"
authors = ["Lorenzo Selvatici <selorenz@student.ethz.ch>", "Sara Decova <decovas@student.ethz.ch>"]
edition = "2018"

[dependencies]

# TODO: replace below with correct path to timely-dataflow cloned repository
timely     = {path = "/home/lorenzo/timely-dataflow" }
kafkaesque = {path = "/home/lorenzo/timely-dataflow/kafkaesque" }

rdkafka = "0.14.1"

csv = "1"
serde = "1"
serde_derive = "1"

chrono = { version = "0.4", features = ["serde"] }
