[package]
name = "dspa-project"
version = "0.1.0"
authors = ["Lorenzo Selvatici <selorenz@student.ethz.ch>", "Sara Decova <decovas@student.ethz.ch>"]
edition = "2018"

[dependencies]
timely = "0.9"
rdkafka = "0.14.1"
csv = "1"
serde = "1"
serde_derive = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "1.7"
config="0.9.2"
lazy_static = "1.3.0"
