[package]
name = "explore"
version = "0.1.0"
authors = ["Lorenzo Selvatici <selorenz@student.ethz.ch>", "Sara Decova <decovas@student.ethz.ch>"]
edition = "2018"

[dependencies]
rand = "0.6.5"
rdkafka = "0.20"
chrono = { version = "0.4", features = ["serde"] }
config = "0.9.2"
lazy_static = "1.3.0"
